Restructured examples and set up launch/build tasks for vscode.

--- a/Examples/Skyhash/Skyhash.csproj
+++ b/Examples/Skyhash/Skyhash.csproj
@@ -6,7 +6,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Skytable.Client\Skytable.Client.csproj" />
+    <ProjectReference Include="..\..\Skytable.Client\Skytable.Client.csproj" />
   </ItemGroup>
 
 
