--- a/Skytable.Client.Tests/Skytable.Client.Tests.csproj
+++ b/Skytable.Client.Tests/Skytable.Client.Tests.csproj
@@ -18,5 +18,9 @@
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
+  
+  <ItemGroup>
+    <ProjectReference Include="..\Skytable.Client\Skytable.Client.csproj" />
+  </ItemGroup>
 
 </Project>
