Now building XML documentation from comments and a lot of cleanup.

--- a/Skytable.Client/Skytable.Client.csproj
+++ b/Skytable.Client/Skytable.Client.csproj
@@ -13,6 +13,7 @@
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/martinmolin/skytable-dotnet</RepositoryUrl>
     <Copyright>Ternacode</Copyright>
+    <GenerateDocumentationFile>true</GenerateDocumentationFile>
   </PropertyGroup>
 
 </Project>
